[gd_scene load_steps=20 format=1]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Tilesets/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/Exit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Coin.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/BlogSansBold30.fnt" type="BitmapFont" id=7]
[ext_resource path="res://Assets/BlogSansBold16.fnt" type="BitmapFont" id=8]
[ext_resource path="res://Assets/controls.png" type="Texture" id=9]
[ext_resource path="res://Assets/space.png" type="Texture" id=10]
[ext_resource path="res://Assets/white.png" type="Texture" id=11]
[ext_resource path="res://Scenes/LevelCleared.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/character.png" type="Texture" id=13]
[ext_resource path="res://Scenes/SamplePlayer.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/StreamPlayer.tscn" type="PackedScene" id=15]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="Animation" id=2]

resource/name = "Pulsate"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 143, 24 ), Vector2( 153, 28 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.254902, 0.243137, 0.286275, 1 )
light_color = Color( 0.941406, 0.941406, 0.941406, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="Animation" id=4]

resource/name = "Show"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.8 ]
}

[node name="World" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Navigation" type="Navigation2D" parent="."]

editor/display_folded = true

[node name="TileMap" type="TileMap" parent="Navigation"]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -196603, 2, -196602, 1, -196601, 1, -196600, 1, -196599, 2, -131067, 2, -131066, 0, -131065, 0, -131064, 0, -131063, 2, -65531, 2, -65530, 0, -65529, 0, -65528, 0, -65527, 2, 1, 2, 2, 1, 3, 1, 4, 1, 5, 2, 6, 0, 7, 1, 8, 1, 9, 1, 10, 1, 11, 2, 65537, 2, 65538, 0, 65539, 0, 65540, 0, 65541, 2, 65542, 0, 65543, 0, 65544, 0, 65545, 0, 65546, 0, 65547, 2, 131073, 2, 131074, 0, 131075, 0, 131076, 0, 131077, 2, 131078, 0, 131079, 0, 131080, 0, 131081, 0, 131082, 0, 131083, 2, 196609, 2, 196610, 0, 196611, 0, 196612, 0, 196613, 1, 196614, 0, 196615, 0, 196616, 0, 196617, 0, 196618, 0, 196619, 2, 262145, 2, 262146, 0, 262147, 0, 262148, 0, 262149, 0, 262150, 0, 262151, 0, 262152, 0, 262153, 0, 262154, 0, 262155, 2, 327681, 1, 327682, 1, 327683, 1, 327684, 1, 327685, 1, 327686, 1, 327687, 1, 327688, 1, 327689, 1, 327690, 1, 327691, 2 )

[node name="Exit" parent="." groups=[
"Exit",
] instance=ExtResource( 3 )]

transform/pos = Vector2( 474.929, -69.3072 )

[node name="Enemy" parent="." groups=[
"Enemy",
] instance=ExtResource( 4 )]

transform/pos = Vector2( 645.002, 280.493 )

[node name="Collectables" type="Node2D" parent="."]

editor/display_folded = true

[node name="Item0" parent="Collectables" instance=ExtResource( 5 )]

transform/pos = Vector2( 645.18, 118.912 )

[node name="Player" parent="." groups=[
"Player",
] instance=ExtResource( 6 )]

transform/pos = Vector2( 225.342, 131.265 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="UI" type="Control" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Panel" type="Panel" parent="CanvasLayer/UI"]

visibility/opacity = 0.5
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 896.0
margin/top = 0.0
margin/right = 1023.0
margin/bottom = 42.0

[node name="Panel 2" type="Panel" parent="CanvasLayer/UI"]

visibility/opacity = 0.5
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 170.0
margin/bottom = 40.0

[node name="CollectedLabel" type="Label" parent="CanvasLayer/UI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 923.0
margin/top = 8.0
margin/right = 1001.0
margin/bottom = 38.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.920776, 1, 0.539062, 1 )
text = "0 / 10"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NoiseLabel" type="Label" parent="CanvasLayer/UI"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 136.0
margin/top = 8.0
margin/right = 184.0
margin/bottom = 38.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.920776, 1, 0.539062, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NoiseInfo" type="Label" parent="CanvasLayer/UI"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 6.0
margin/right = 164.0
margin/bottom = 36.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.752388, 0.753906, 0.745071, 1 )
text = "noise level: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Busted" type="Panel" parent="CanvasLayer/UI"]

editor/display_folded = true
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 326.0
margin/top = 342.0
margin/right = 711.0
margin/bottom = 569.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="CanvasLayer/UI/Busted"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 144.0
margin/top = 35.0
margin/right = 240.0
margin/bottom = 65.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.699219, 0, 0, 1 )
text = "Busted!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/UI/Busted/Label"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Pulsate = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Pulsate"

[node name="Again" type="Button" parent="CanvasLayer/UI/Busted"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 82.0
margin/top = 112.0
margin/right = 308.0
margin/bottom = 161.0
custom_styles/hover = SubResource( 3 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0.0429688, 0.0429688, 0.0429688, 1 )
custom_colors/font_color = Color( 0.171875, 0.171875, 0.171875, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Try again"
flat = true

[node name="Quit" type="Button" parent="CanvasLayer/UI/Busted"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 82.0
margin/top = 170.0
margin/right = 308.0
margin/bottom = 219.0
custom_styles/hover = SubResource( 3 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0.0429688, 0.0429688, 0.0429688, 1 )
custom_colors/font_color = Color( 0.415802, 0.488281, 0.423729, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/UI/Busted"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Show = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="ControlInfo" type="Panel" parent="CanvasLayer/UI"]

editor/display_folded = true
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 324.0
margin/top = 188.0
margin/right = 709.0
margin/bottom = 470.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="CanvasLayer/UI/ControlInfo"]

rect/scale = Vector2( 0.833206, 0.833206 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 151.0
margin/top = 24.0
margin/right = 258.0
margin/bottom = 54.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.699219, 0, 0, 1 )
text = "Controls"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/UI/ControlInfo"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Show = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Label 2" type="Label" parent="CanvasLayer/UI/ControlInfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 100.0
margin/top = 256.0
margin/right = 280.0
margin/bottom = 273.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.339844, 0.339844, 0.339844, 1 )
text = "press any key to continue"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="CanvasLayer/UI/ControlInfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 139.0
margin/top = 92.0
margin/right = 319.0
margin/bottom = 109.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "player movement"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Instructions" type="Label" parent="CanvasLayer/UI/ControlInfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 165.0
margin/right = 363.0
margin/bottom = 253.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Collect all the coins and get out. But be careful, guards can hear you! More coins you carry, more noisy your walk is. You can lure guards by making noise."
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label4" type="Label" parent="CanvasLayer/UI/ControlInfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 137.0
margin/top = 128.0
margin/right = 317.0
margin/bottom = 145.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "make noise"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="CanvasLayer/UI/ControlInfo"]

transform/pos = Vector2( 91.2102, 90.2079 )
texture = ExtResource( 9 )
modulate = Color( 0.658997, 0.921875, 0.681588, 1 )

[node name="Sprite 2" type="Sprite" parent="CanvasLayer/UI/ControlInfo"]

transform/pos = Vector2( 91.2102, 136.314 )
texture = ExtResource( 10 )
modulate = Color( 0.953125, 0.740906, 0.740906, 1 )

[node name="TextureFrame" type="TextureFrame" parent="CanvasLayer/UI/ControlInfo"]

visibility/opacity = 0.8
visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -323.0
margin/top = -189.0
margin/right = 703.0
margin/bottom = 431.0
texture = ExtResource( 11 )
modulate = Color( 0, 0, 0, 1 )
expand = true
stretch_mode = 0

[node name="LevelCleared" parent="CanvasLayer/UI" instance=ExtResource( 12 )]

[node name="Paused" type="Panel" parent="CanvasLayer/UI"]

editor/display_folded = true
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 317.0
margin/top = 190.0
margin/right = 702.0
margin/bottom = 417.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="CanvasLayer/UI/Paused"]

rect/scale = Vector2( 0.92353, 0.92353 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 146.824
margin/top = 25.5294
margin/right = 242.824
margin/bottom = 55.5294
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Paused"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/UI/Paused/Label"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Pulsate = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Pulsate"

[node name="Resume" type="Button" parent="CanvasLayer/UI/Paused"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 82.0
margin/top = 84.0
margin/right = 308.0
margin/bottom = 133.0
custom_styles/hover = SubResource( 3 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0.0429688, 0.0429688, 0.0429688, 1 )
custom_colors/font_color = Color( 0.171875, 0.171875, 0.171875, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resume"
flat = true

[node name="Quit" type="Button" parent="CanvasLayer/UI/Paused"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 82.0
margin/top = 144.0
margin/right = 308.0
margin/bottom = 193.0
custom_styles/hover = SubResource( 3 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0.0429688, 0.0429688, 0.0429688, 1 )
custom_colors/font_color = Color( 0.203125, 0.0253906, 0.0253906, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/UI/Paused"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Show = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Finished" type="Panel" parent="CanvasLayer/UI"]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 324.0
margin/top = 188.0
margin/right = 709.0
margin/bottom = 430.0
custom_styles/panel = SubResource( 1 )

[node name="Quit1" type="Button" parent="CanvasLayer/UI/Finished"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 177.0
margin/right = 242.0
margin/bottom = 226.0
custom_styles/hover = SubResource( 3 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0.0429688, 0.0429688, 0.0429688, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Return to menu"
flat = true

[node name="TextureFrame" type="TextureFrame" parent="CanvasLayer/UI/Finished"]

visibility/opacity = 0.8
visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -323.0
margin/top = -189.0
margin/right = 703.0
margin/bottom = 431.0
texture = ExtResource( 11 )
modulate = Color( 0, 0, 0, 1 )
expand = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/UI/Finished"]

rect/scale = Vector2( 0.833206, 0.833206 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 106.0
margin/top = 19.0
margin/right = 313.0
margin/bottom = 49.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.699219, 0, 0, 1 )
text = "Congratulations"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Instructions" type="Label" parent="CanvasLayer/UI/Finished"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 106.0
margin/right = 293.0
margin/bottom = 148.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game by Jiri Hysek
Made for Ludum Dare #40"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label4" type="Label" parent="CanvasLayer/UI/Finished"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 23.0
margin/top = 63.0
margin/right = 359.0
margin/bottom = 80.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You have finished the game! I hope you liked it!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite 2" type="Sprite" parent="CanvasLayer/UI/Finished"]

transform/pos = Vector2( 330.381, 149.902 )
transform/scale = Vector2( 0.691213, 0.718599 )
texture = ExtResource( 13 )
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/UI/Finished"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Show = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SamplePlayer" parent="." instance=ExtResource( 14 )]

[node name="StreamPlayer" parent="." instance=ExtResource( 15 )]

stream/autoplay = true

[connection signal="pressed" from="CanvasLayer/UI/Busted/Again" to="." method="_on_Again_pressed"]

[connection signal="pressed" from="CanvasLayer/UI/Busted/Quit" to="." method="_on_Quit_pressed"]

[connection signal="pressed" from="CanvasLayer/UI/Paused/Resume" to="." method="resume_game"]

[connection signal="pressed" from="CanvasLayer/UI/Paused/Quit" to="." method="_on_Quit_pressed"]

[connection signal="pressed" from="CanvasLayer/UI/Finished/Quit1" to="." method="_on_Quit_pressed"]


